--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-    <style name="dark_calculator_button" parent="Widget.Material3.Button.OutlinedButton">
+
+
+    <!-- Buttons styles-->
+    <style name="main_calculator_dark_button" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="shapeAppearance">@style/main_calculator_button_shape</item>
+        <item name="android:backgroundTint">@null</item>
+        <item name="android:background">@drawable/temp_background</item>
+    </style>
+
+    <style name="main_calculator_light_button" parent="Widget.Material3.Button.OutlinedButton">
 
     </style>
-    
+
+    <style name="main_calculator_transparent_button" parent="Widget.Material3.Button.OutlinedButton">
+
+    </style>
+
+    <style name="main_calculator_unactive_button" parent="Widget.Material3.Button.OutlinedButton">
+
+    </style>
+
+    <!-- Shape styles -->
+    <style name="main_calculator_button_shape" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">2dp</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:background">@drawable/temp_background</item>
+    </style>
+
 </resources>
