Сделаны фоны для кнопок основных экранов калькулятора.

--- a/core/src/main/res/drawable/temp_background.xml
+++ b/core/src/main/res/drawable/temp_background.xml
@@ -6,4 +6,5 @@
         android:centerColor="#00FF00"
         android:endColor="#0000FF"
         android:angle="270" />
+    <corners android:radius="4dp"/>
 </shape>
