--- a/core/src/main/res/drawable/calculator_background.xml
+++ b/core/src/main/res/drawable/calculator_background.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/calc_background_img"/>
+    <item android:drawable="@drawable/temp_background"/>
 </layer-list>
