--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
 
     <!-- Buttons styles-->
-    <style name="main_calculator_dark_button" parent="Widget.Material3.Button.OutlinedButton">
+    <style name="main_calculator_dark_button" parent="Widget.AppCompat.Button">
         <item name="shapeAppearance">@style/main_calculator_button_shape</item>
         <item name="android:backgroundTint">@null</item>
         <item name="android:background">@drawable/temp_background</item>
@@ -24,9 +24,7 @@
     <!-- Shape styles -->
     <style name="main_calculator_button_shape" parent="">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">2dp</item>
-        <item name="backgroundTint">@null</item>
-        <item name="android:background">@drawable/temp_background</item>
+        <item name="cornerRadius">122dp</item>
     </style>
 
 </resources>
