--- a/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
+++ b/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
@@ -4,19 +4,380 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="4dp"
+    android:padding="24dp"
     tools:context=".StandardCalculatorScreen">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
-        style="@style/main_calculator_dark_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:backgroundTint="@null"
-        android:background="@drawable/temp_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button22"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_shadowed_button"
+        android:padding="0dp"
+        android:text="MC"
+        app:layout_constraintBottom_toTopOf="@id/button27"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button23"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.53" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button23"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_shadowed_button"
+        android:padding="0dp"
+        android:text="MR"
+        app:layout_constraintBottom_toBottomOf="@+id/button22"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button24"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button22"
+        app:layout_constraintTop_toTopOf="@+id/button22" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button24"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_shadowed_button"
+        android:padding="0dp"
+        android:text="MS"
+        app:layout_constraintBottom_toBottomOf="@+id/button23"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button25"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button23"
+        app:layout_constraintTop_toTopOf="@+id/button23" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button25"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_shadowed_button"
+        android:padding="0dp"
+        android:text="M+"
+        app:layout_constraintBottom_toBottomOf="@+id/button24"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button26"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button24"
+        app:layout_constraintTop_toTopOf="@+id/button24" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button26"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_shadowed_button"
+        android:padding="0dp"
+        android:text="M-"
+        app:layout_constraintBottom_toBottomOf="@+id/button25"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button25"
+        app:layout_constraintTop_toTopOf="@+id/button25" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button27"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="<---"
+        app:layout_constraintBottom_toTopOf="@+id/button37"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button28"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button22" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button28"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="CE"
+        app:layout_constraintBottom_toBottomOf="@+id/button27"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button29"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button27"
+        app:layout_constraintTop_toTopOf="@+id/button27" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button29"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="C"
+        app:layout_constraintBottom_toBottomOf="@+id/button28"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button30"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button28"
+        app:layout_constraintTop_toTopOf="@+id/button28" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button30"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="+-"
+        app:layout_constraintBottom_toBottomOf="@+id/button29"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button31"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button29"
+        app:layout_constraintTop_toTopOf="@+id/button29" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button31"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="v"
+        app:layout_constraintBottom_toBottomOf="@+id/button30"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button30"
+        app:layout_constraintTop_toTopOf="@+id/button30" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button37"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:text="7"
+        app:layout_constraintBottom_toTopOf="@+id/button42"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button38"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button27" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button38"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:text="8"
+        app:layout_constraintBottom_toBottomOf="@+id/button37"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button39"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button37"
+        app:layout_constraintTop_toTopOf="@+id/button37" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button39"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:text="9"
+        app:layout_constraintBottom_toBottomOf="@+id/button38"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button40"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button38"
+        app:layout_constraintTop_toTopOf="@+id/button38" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button40"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="/"
+        app:layout_constraintBottom_toBottomOf="@+id/button39"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button41"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button39"
+        app:layout_constraintTop_toTopOf="@+id/button39" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button41"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:text="%"
+        app:layout_constraintBottom_toBottomOf="@+id/button40"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button40"
+        app:layout_constraintTop_toTopOf="@+id/button40" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button42"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:padding="0dp"
+        android:text="4"
+        app:layout_constraintBottom_toTopOf="@+id/button47"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button43"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button37" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button43"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:padding="0dp"
+        android:text="5"
+        app:layout_constraintBottom_toBottomOf="@+id/button42"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button44"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button42"
+        app:layout_constraintTop_toTopOf="@+id/button42" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button44"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:padding="0dp"
+        android:text="6"
+        app:layout_constraintBottom_toBottomOf="@+id/button43"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button45"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button43"
+        app:layout_constraintTop_toTopOf="@+id/button43" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button45"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:padding="0dp"
+        android:text="*"
+        app:layout_constraintBottom_toBottomOf="@+id/button44"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button46"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button44"
+        app:layout_constraintTop_toTopOf="@+id/button44" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button46"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:padding="0dp"
+        android:text="1/x"
+        app:layout_constraintBottom_toBottomOf="@+id/button45"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button45"
+        app:layout_constraintTop_toTopOf="@+id/button45" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button47"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:padding="0dp"
+        android:text="1"
+        app:layout_constraintDimensionRatio="w,8:10"
+        app:layout_constraintEnd_toStartOf="@+id/button48"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button42" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button48"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:padding="0dp"
+        android:text="2"
+        app:layout_constraintBottom_toBottomOf="@+id/button47"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button49"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button47"
+        app:layout_constraintTop_toTopOf="@+id/button47" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button49"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_light_button"
+        android:padding="0dp"
+        android:text="3"
+        app:layout_constraintBottom_toBottomOf="@+id/button48"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button50"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button48"
+        app:layout_constraintTop_toTopOf="@+id/button48" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button50"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:padding="0dp"
+        android:text="-"
+        app:layout_constraintBottom_toBottomOf="@+id/button49"
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toStartOf="@+id/button51"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button49"
+        app:layout_constraintTop_toTopOf="@+id/button49" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button51"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/main_calculator_dark_button"
+        android:padding="0dp"
+        android:text="="
+        app:layout_constraintDimensionRatio="w,10:8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button50"
+        app:layout_constraintTop_toTopOf="@+id/button50" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
