--- a/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
+++ b/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
@@ -93,13 +93,17 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_shadowed_button"
-            android:padding="0dp"
             android:text="MC"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toTopOf="@id/button27"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button23"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/display_screen_constraint_layout"/>
+            app:layout_constraintTop_toBottomOf="@+id/display_screen_constraint_layout" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button23"
@@ -107,8 +111,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_shadowed_button"
-            android:padding="0dp"
             android:text="MR"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button22"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button24"
@@ -121,8 +129,11 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_shadowed_button"
-            android:padding="0dp"
-            android:text="MS"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"            android:text="MS"
             app:layout_constraintBottom_toBottomOf="@+id/button23"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button25"
@@ -135,7 +146,11 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_shadowed_button"
-            android:padding="0dp"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             android:text="M+"
             app:layout_constraintBottom_toBottomOf="@+id/button24"
             app:layout_constraintDimensionRatio="w,10:8"
@@ -149,7 +164,11 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_shadowed_button"
-            android:padding="0dp"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             android:text="M-"
             app:layout_constraintBottom_toBottomOf="@+id/button25"
             app:layout_constraintDimensionRatio="w,10:8"
@@ -179,6 +198,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
             android:text="CE"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button27"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button29"
@@ -192,6 +216,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
             android:text="C"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button28"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button30"
@@ -205,6 +234,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
             android:text="+-"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button29"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button31"
@@ -218,6 +252,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
             android:text="v"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button30"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -233,6 +272,11 @@
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
             android:text="7"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toTopOf="@+id/button42"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button38"
@@ -246,6 +290,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
             android:text="8"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button37"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button39"
