Доделана автонастройка размера шрифта кнопок калькулятора.

--- a/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
+++ b/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
@@ -92,13 +92,13 @@
             android:layout_marginStart="@dimen/calculator_space_between_buttons_half_size"
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
-            android:background="@drawable/main_calculator_shadowed_button"
-            android:text="MC"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
             android:autoSizeTextType="uniform"
+            android:background="@drawable/main_calculator_shadowed_button"
             android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
+            android:text="MC"
             app:layout_constraintBottom_toTopOf="@id/button27"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button23"
@@ -176,7 +176,7 @@
             app:layout_constraintStart_toEndOf="@+id/button25"
             app:layout_constraintTop_toTopOf="@+id/button25" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <ImageButton
             android:id="@+id/button27"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -184,7 +184,8 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="<---"
+            android:scaleType="fitxy"
+            android:src="@drawable/backspace_arrow_img"
             app:layout_constraintBottom_toTopOf="@+id/button37"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button28"
@@ -308,6 +309,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
             android:text="9"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button38"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button40"
@@ -321,6 +327,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
             android:text="/"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button39"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button41"
@@ -334,6 +345,11 @@
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
             android:text="%"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button40"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -348,8 +364,12 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:padding="0dp"
             android:text="4"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toTopOf="@+id/button47"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button43"
@@ -362,8 +382,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:padding="0dp"
             android:text="5"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button42"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button44"
@@ -376,8 +400,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:padding="0dp"
             android:text="6"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button43"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button45"
@@ -390,8 +418,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:padding="0dp"
             android:text="*"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button44"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button46"
@@ -404,8 +436,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:padding="0dp"
             android:text="1/x"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button45"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -420,8 +456,12 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:padding="0dp"
             android:text="1"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintDimensionRatio="w,8:10"
             app:layout_constraintEnd_toStartOf="@+id/button48"
             app:layout_constraintStart_toStartOf="parent"
@@ -433,8 +473,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:padding="0dp"
             android:text="2"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button47"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button49"
@@ -447,8 +491,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:padding="0dp"
             android:text="3"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button48"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button50"
@@ -461,8 +509,12 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:padding="0dp"
             android:text="-"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button49"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button51"
@@ -476,8 +528,12 @@
             android:layout_marginStart="@dimen/calculator_space_between_buttons_half_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:padding="0dp"
             android:text="="
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button50"
@@ -490,6 +546,11 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:background="@drawable/main_calculator_light_button"
             android:text="0"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_digit_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@id/button2"
             app:layout_constraintEnd_toEndOf="@+id/button48"
             app:layout_constraintStart_toStartOf="@+id/button47"
@@ -501,6 +562,11 @@
             android:layout_height="0dp"
             android:background="@drawable/main_calculator_light_button"
             android:text=","
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintDimensionRatio="w,8:10"
             app:layout_constraintEnd_toEndOf="@+id/button49"
             app:layout_constraintStart_toStartOf="@+id/button49"
@@ -512,6 +578,11 @@
             android:layout_height="0dp"
             android:background="@drawable/main_calculator_dark_button"
             android:text="+"
+            android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
+            android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
+            android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
+            android:autoSizeTextType="uniform"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
             app:layout_constraintBottom_toBottomOf="@+id/button2"
             app:layout_constraintEnd_toEndOf="@+id/button50"
             app:layout_constraintStart_toStartOf="@+id/button50"
